css/style.css
/* ... */
#loader {
  display: block;
  position: relative;
  left: 50%;
  top: 50%;
  width: 150px;
  height: 150px;
  margin: -75px 0 0 -75px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #9370DB;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

#loader:before {
  content: "";
  position: absolute;
  top: 5px;
  left: 5px;
  right: 5px;
  bottom: 5px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #BA55D3;
  -webkit-animation: spin 3s linear infinite;
  animation: spin 3s linear infinite;
}

#loader:after {
  content: "";
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;
  border-radius: 50%;
  border: 3px solid transparent;
  border-top-color: #FF00FF;
  -webkit-animation: spin 1.5s linear infinite;
  animation: spin 1.5s linear infinite;
}

@-webkit-keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
/* -------------------------------------------------------
                     phone & tablet
-------------------------------------------------------- */
@media (max-width: 991px) {
  .sm-mb-50 {
    margin-top: 30px !important;
    margin-bottom: 50px !important;
  }

  .sm-mb-80 {
    margin-bottom: 80px !important;
  }

  .navbar-default .navbar-brand {
    margin-top: 0 !important;
  }

  .header, .counter, .testimonel, .contact {
    background-position: center !important;
    background-attachment: inherit !important;
  }

  .form-group {
    display: block !important;
  }

  label {
    display: none !important;
  }

  .sm-float-left {
    float: left !important;
  }
}
@media (max-width: 767px) {
  .xs-mb-50 {
    margin-bottom: 50px;
  }

  .xs-mb-70 {
    margin-bottom: 70px !important;
  }

  .navbar-default .navbar-brand {
    margin-top: 0 !important;
  }

  .header, .counter, .testimonel, .contact {
    background-position: center !important;
    background-attachment: inherit !important;
  }

  .header .info h1 {
    font-size: 3rem !important;
  }
  .header .info h3 {
    font-size: 2rem !important;
  }
}
@media (max-width: 560px) {
  .navbar-default .navbar-brand {
    margin-top: 0 !important;
  }

  .header, .counter, .testimonel, .contact {
    background-position: center !important;
    background-attachment: inherit !important;
  }

  .filtering button {
    font-size: 14px !important;
    padding: 2px 5px !important;
    margin-left: .2rem !important;
    -webkit-margin-after: 20px !important;
            margin-block-end: 20px !important;
    border-radius: 0 !important;
  }
}
/* -------------------------------------------------------
                     Global
-------------------------------------------------------- */
body {
  overflow-x: hidden !important;
  font-family: 'Source Sans Pro', sans-serif;
  background-color: #fff;
  color: #6f6f6f;
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
  font-weight: 500;
}

/** THEME COLOR **/
p {
  line-height: 1.5;
  font-size: 16px;
}

img {
  width: 100%;
  height: 100%;
  color: #738590;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Montserrat', sans-serif;
  color: #232323;
}

.section-bg {
  position: absolute;
  left: -5%;
  color: #bdb3b3;
  font-size: 60rem;
  opacity: .1;
  z-index: -1;
}

.section-border {
  border-bottom: 1px solid #cccccc;
}

/*---- section title----*/
.section-title {
  position: relative;
  margin-bottom: 1rem;
  font-size: 2.5rem;
  font-family: 'Cabin', sans-serif;
  font-weight: 900;
  text-transform: capitalize;
  letter-spacing: 1px;
  text-align: center;
}
.section-title::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 0;
  -webkit-transform: translate(0%, -50%);
          transform: translate(0%, -50%);
  width: 100%;
  border-bottom: 1px solid #cccccc;
}
.section-title span {
  position: relative;
  padding: .5rem 1.4rem;
  background-color: #fff;
}

/*---- sub section title----*/
.sub-tit {
  font-size: 1.5rem;
  font-weight: 600;
  letter-spacing: 1px;
  text-transform: capitalize;
  margin-bottom: 40px;
}

/* -------------------------------------------------------
                     Navbar
-------------------------------------------------------- */
.navbar-default {
  background: none;
  border: none;
  border-radius: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 99;
}
.navbar-default .navbar-brand {
  margin-top: 10px;
  -webkit-transition: all .3s;
  transition: all .3s;
}
.navbar-default .navbar-brand img {
  width: 160px;
  height: 40px;
  margin-top: -15px;
}
.navbar-default .navbar-brand .logo-1 {
  display: none;
}
.navbar-default .navbar-nav > li > a {
  margin: 0 !important;
  color: #D8D7D7 !important;
  padding: 0 !important;
  -webkit-transition: all .3s;
  transition: all .3s;
}
.navbar-default .navbar-nav > li > a:hover {
  color: #7777ff !important;
}
.navbar-default .navbar-nav > li {
  font-size: 14px;
  margin: 25px 10px 0;
  padding: 0 2px;
  background: none;
  cursor: pointer;
  position: relative;
}
.navbar-default .navbar-nav > li .active {
  color: #7777ff !important;
  background: none;
}

.nav-scroll {
  background: #fff;
  -webkit-box-shadow: 0px 0px 10px #f1f1f1;
          box-shadow: 0px 0px 10px #f1f1f1;
  min-height: 60px;
  line-height: 60px;
  padding: 0;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transition: all .5s;
  transition: all .5s;
}
.nav-scroll .navbar-nav > li > a {
  color: #111 !important;
}
.nav-scroll .logo-1 {
  display: block !important;
}
.nav-scroll .logo-2 {
  display: none !important;
}
/* ... */

